Add styling to personal website

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <h1>Aleck Wu</h1>
         <p>Noob CS:GO player</p>
         <p>I love cup noodles</p>
+        <p>FUCK HTML</p>
         <img src= "http://img.wallpaperfolder.com/f/5DE6307A1BF6/awp-dragon-lore-cs-go.jpg">
     </body>
 </html>
